# bms-level-predictor

./: CMakeLists.txt  patternparser.cpp  simulator.py  train.py  validate.py
pretrained_network/: network_4400.data-00000-of-00002  network_4400.data-00001-of-00002  network_4400.index
satellitebms/: 11|[黒皇帝] Neurotoxicity_neurotoxicity_7k.bms
stellabms/: 13|[sa10] Sling Beat_7kbananaman_Mitto.bme
